Refactored user routes
